src/test/deca/context/valid/method-call-without-param.deca
// Description:
//    method call sans paramètre
//
// Resultats:
//    
//
// Historique:
//    cree le 16/01/2023

class A {
    void get(){}
}

{
    A a = new A();
    a.get();
}