src/test/deca/context/invalid/method-call-without-param.deca
// Description:
//    Condition de la règle 3.28 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 16: Not enough params in the method "get" (rule 3.28)
//
// Historique:
//    cree le 16/01/2023

class A{
    void get(int x){}
}
{
    A a = new A();
    a.get();
}